--- a/backend/timetable-api/pyproject.toml
+++ b/backend/timetable-api/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic==2.5.0",
     "pydantic-settings==2.1.0",
     "motor==3.4.0",
+    
 ]
 
 [project.optional-dependencies]
@@ -22,6 +23,8 @@ dev = [
     "black==23.11.0",
     "flake8==6.1.0",
     "mypy==1.7.0",
+    "openai==2.16.0",
+    "azure-identity==1.25.1"
 ]
 
 [tool.setuptools]
